--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Kharynic</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="manifest" href="resources/misc/manifest.json">
-<link rel='stylesheet' href='resources/styles/WebHost.css' />
+<link rel='stylesheet' href='resources/styles/WebHost.css'>
 <script src="scripts/WebHost.js"></script>
 <body>
     <script>WebHost.Init(document.body);</script>
