Set icon in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="manifest" href="resources/misc/manifest.json">
 <link rel='stylesheet' href='resources/styles/WebHost.css'>
+<link rel="icon" href="resources/images/icon.png">
 <script src="scripts/WebHost.js"></script>
 <body>
     <script>WebHost.Init(document.body);</script>
