--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Kharynic</title>
+<title>Kharynic - The History of Mine Valley</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="manifest" href="resources/misc/manifest.json">
 <link rel='stylesheet' href='resources/styles/WebHost.css'>
