#build 0.0.71+27a - embedded location mesh demo

--- a/bin/index.html
+++ b/bin/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | engine</title>
-    <script src="Build/UnityLoader.js"></script>
+    <script src="Build/b14b32a200649d0650c1a6ff3db39cf4.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/bin.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/c4a04a575075c81f407623dbdb9f01d7.json");
     </script>
   </head>
   <body>
