--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8">
 <title>Kharynic - The History of Mine Valley</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link rel="manifest" href="resources/misc/manifest.json">
-<link rel='stylesheet' href='resources/styles/WebHost.css'>
+<link rel="manifest" href="WebHost/manifest.json">
+<link rel='stylesheet' href='WebHost/style.css'>
 <link rel="icon" href="resources/images/icon.png">
-<script src="scripts/WebHost.js"></script>
+<script src="WebHost/WebHost.js"></script>
 <body>
     <script>WebHost.Init(document.body);</script>
 </body>
