#webhost major refactoring

--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 <link rel="icon" href="/resources/images/icon.png">
 <script src="/WebHost/WebHost.js"></script>
 <body>
-    <script>Kharynic.WebHost.Init(document.body);</script>
+    <script>Kharynic.WebHost.WebHost.Init(document.body);</script>
 </body>
