#webhost extracted loading code into ScriptLoader

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="manifest" href="/WebHost/manifest.json">
 <link rel='stylesheet' href='/WebHost/style.css'>
 <link rel="icon" href="/resources/images/icon.png">
-<script src="/WebHost/WebHost.js"></script>
+<script src="/WebHost/ScriptLoader.js"></script>
 <body>
-    <script>Kharynic.WebHost.WebHost.Init(document.body);</script>
+    <script>new Kharynic.WebHost.ScriptLoader(document.head).Start();</script>
 </body>
